<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:id="@+id/date_item_card_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/prompt_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Where should \nwe start?"
                android:textSize="20sp"
                android:textColor="#333"
                android:layout_centerHorizontal="true"
                android:gravity="center"/>

            <Spinner
                android:id="@+id/category_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/prompt_text"
                android:layout_alignRight="@id/prompt_text"
                />
            <EditText
                android:id="@+id/query_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/category_spinner"
                android:inputType="number"
                android:hint="Zip Code"/>
            <EditText
                android:id="@+id/additional_query_entry"
                android:layout_below="@id/query_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Optional additional info (Pizza, Italian, Blues)"/>
            <Button
                android:id="@+id/search_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/additional_query_entry"
                android:layout_centerHorizontal="true"
                android:text="Search"/>

        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>