...
        android:id="@+id/roulette_progress_bar"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/roulette_query"
        android:layout_alignParentBottom="true"
        android:hint="What would you like to eat?"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/button_frame"
        android:layout_toLeftOf="@+id/button_frame" />
...
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        >
        <android.support.design.widget.FloatingActionButton
            android:clickable="true"
            android:id="@+id/roulette_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fabSize="mini"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            />
...
